# SweetBITS

./: .gitignore  FEATURES.md  GEMINI.md  LICENSE  README.md  USAGE.md  pyproject.toml  test_algo.py  test_algo_composition.py  test_debug.py
plans/: dynamic_clade_math_plan.md
scripts/: generate_test_data.py
src/sweetbits/: annotate.py  audit.py  canonical.py  cli.py  convert.py  features.py  kmers.py  math.py  metadata.py  reads.py  reports.py  tables.py  taxmath.py  testing.py  utils.py
tests/: generate_kmer_golden_data.py  generate_universal_golden_data.py  test_annotate.py  test_annotate_stats.py  test_canonical.py  test_canonical_complex.py  test_canonical_mode.py  test_convert.py  test_feature_chunks.py  test_features.py  test_features_abundance.py  test_features_kmer_sample.py  test_gather_reports.py  test_kmers.py  test_mass_balance.py  test_math.py  test_overwrite.py  test_points.py  test_read_lengths.py  test_reads.py  test_report_formats.py  test_reports.py  test_table.py  test_taxmath.py  test_utils.py  test_validation.py
tests/golden_data/: Ki-2024_01_001.kraken  Ki-2024_01_002.kraken  Ki-2024_01_003.kraken  Ki-2024_01_004.kraken  Ki-2024_01_005.kraken  golden_kmer_features.csv
