[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sweetbits"
version = "0.2.0"
description = "SweetBITS: a suite of sweet command-line tools for Kraken 2 derived data and the Swedish Biodiversity in Time and Space (SweBITS) project."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polars>=1.38.1",
    "click>=8.3.1",
    "numpy>=2.4.2",
    "joltax>=0.3.0",
    "pyarrow",
    "scipy",
]

[project.scripts]
sweetbits = "sweetbits.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sweetbits"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
